<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    android:orientation="vertical"
>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarEmployeeHome"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/mainTheme">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="13dp">

            <TextView
                android:id="@+id/employeeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>
    <ImageView
        android:id="@+id/androidLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/empHome"
        app:srcCompat="@drawable/android_symbol" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/empHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="16dp">

        <EditText
            android:id="@+id/empEditEmpName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/username"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/empEditEmpPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/empEditEmpName"
            />

        <EditText
            android:id="@+id/empEditEmpRole"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/role"
            android:inputType="text"
            android:focusable="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/empEditEmpPassword"
            />

        <EditText
            android:id="@+id/empEditEmpID"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/empID"
            android:inputType="text"
            android:focusable="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/empEditEmpRole"
            />

        <Button
            android:id="@+id/empButtonUpdateEmp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/empEditEmpID"/>

        <Button
            android:id="@+id/empButtonLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/empButtonUpdateEmp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/empErrorMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/empHome"
        android:textColor="#DC143C"
        android:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>