<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:id="@+id/adminHome">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAdminHome"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/mainTheme">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
>

            <ImageButton
                android:id="@+id/buttonBackAdminSearchEmployee"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_back"
                app:tint="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>


            <TextView
                android:id="@+id/adminName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/buttonBackAdminSearchEmployee"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/employeeDetailsInterface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbarAdminHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/androidLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/empHome"
            app:srcCompat="@drawable/android_symbol" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/empHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="16dp">

            <EditText
                android:id="@+id/editAdminUsername"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/username"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/editAdminPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editAdminUsername"
                />

            <EditText
                android:id="@+id/editAdminEmpID"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/empID"
                android:inputType="text"
                android:focusable="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editAdminPassword"
                />

            <TextView
                android:id="@+id/textRole"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editAdminEmpID"
                android:text="@string/role2"
                android:layout_marginVertical="10dp"
                android:textSize="18sp"
                />

            <Spinner
                android:id="@+id/adminEditEmpRole"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintStart_toEndOf="@id/textRole"
                app:layout_constraintTop_toTopOf="@id/textRole"
                app:layout_constraintBottom_toBottomOf="@id/textRole"

                />

            <Button
                android:id="@+id/adminButtonUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textRole"/>

            <Button
                android:id="@+id/adminButtonDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_employee"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/adminButtonUpdate"/>

            <Button
                android:id="@+id/adminButtonBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/adminButtonDelete"/>

            <TextView
                android:id="@+id/errMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/adminButtonBack"
                android:textColor="#DC143C"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchInterface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="16dp"
        android:visibility="visible"
        >

        <EditText
            android:id="@+id/editTextSearchEmpID"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/enter_employee_id"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/buttonAdminSearchEmployees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_employee"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextSearchEmpID"/>


        <TextView
            android:id="@+id/errorMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/buttonAdminSearchEmployees"
            android:textColor="#DC143C"
            android:visibility="invisible"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>