<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAdminAddEmployee"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/mainTheme">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            >

            <ImageButton
                android:id="@+id/buttonBackAdminAddEmployee"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_back"
                app:tint="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>


            <TextView
                android:id="@+id/adminName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/buttonBackAdminAddEmployee"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <ImageView
            android:id="@+id/androidLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/addEmployeeHome"
            app:srcCompat="@drawable/android_symbol" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/addEmployeeHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="16dp">

            <EditText
                android:id="@+id/addEmployeeUsername"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/username"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/addEmployeePassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addEmployeeUsername"
                />

            <EditText
                android:id="@+id/addEmployeeEmpID"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/empID"
                android:inputType="numberDecimal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addEmployeePassword"
                />
            <TextView
                android:id="@+id/textRole"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addEmployeeEmpID"
                android:text="@string/role2"
                android:layout_marginVertical="10dp"
                android:textSize="18sp"
                />

            <Spinner
                android:id="@+id/addEmployeeRole"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintStart_toEndOf="@id/textRole"
                app:layout_constraintTop_toTopOf="@id/textRole"
                app:layout_constraintBottom_toBottomOf="@id/textRole"

                />



            <Button
                android:id="@+id/adminButtonAddEmp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_employee"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textRole"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/errorMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/content"
        android:textColor="#DC143C"
        android:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>